--- a/.gitignore
+++ b/.gitignore
@@ -148,4 +148,4 @@ fabric.properties
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 .idea/**/azureSettings.xml
 
-# End of https://www.toptal.com/developers/gitignore/api/c++,clion
+# End of https://www.toptal.com/developers/gitignore/api/c++,clion.idea
